fix logout, acctoken
